{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 39,
  "lineage": "c1c3d044-e5e6-7da8-12c5-b219981cbe13",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "internal_domain_name_suffix": "z41ddus3hebuvldnfk1gl3nqbb.tx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/publicIPAddresses/jenkins-public-ip",
                "subnet_id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/virtualNetworks/jenkins-vnet/subnets/jenkins-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southindia",
            "mac_address": "00-0D-3A-CA-36-0C",
            "name": "jenkins-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "DevSecOps-Capstone-RG",
            "virtual_machine_id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Compute/virtualMachines/Jenkins-Docker-VM"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "jenkins-nic",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkInterfaces/jenkins-nic|/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg",
            "network_interface_id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "network_security_group_id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg",
            "location": "southindia",
            "name": "jenkins-nsg",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGrafana",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "32560",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowK8sNodePort",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowJenkins",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9090",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowPrometheus",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "jenkins-nsg",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3000",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/AllowGrafana",
            "name": "AllowGrafana",
            "network_security_group_name": "jenkins-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowGrafana",
            "network_security_group_name": "jenkins-nsg",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/AllowJenkins",
            "name": "AllowJenkins",
            "network_security_group_name": "jenkins-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowJenkins",
            "network_security_group_name": "jenkins-nsg",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "k8s_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "32560",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/AllowK8sNodePort",
            "name": "AllowK8sNodePort",
            "network_security_group_name": "jenkins-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowK8sNodePort",
            "network_security_group_name": "jenkins-nsg",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "9090",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/AllowPrometheus",
            "name": "AllowPrometheus",
            "network_security_group_name": "jenkins-nsg",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowPrometheus",
            "network_security_group_name": "jenkins-nsg",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "jenkins-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowSSH",
            "network_security_group_name": "jenkins-nsg",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/publicIPAddresses/jenkins-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.235.35.205",
            "ip_version": "IPv4",
            "location": "southindia",
            "name": "jenkins-public-ip",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "jenkins-public-ip",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/virtualNetworks/jenkins-vnet/subnets/jenkins-subnet",
            "name": "jenkins-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "DevSecOps-Capstone-RG",
            "virtual_network_name": "jenkins-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "jenkins-subnet",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73",
            "virtual_network_name": "jenkins-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d231b6cf-395d-4a03-ac6d-2ab665f5b009",
            "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/virtualNetworks/jenkins-vnet",
            "location": "southindia",
            "name": "jenkins-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dc09713c-7d31-40ff-a15b-47032d864c73/resourceGroups/DevSecOps-Capstone-RG/providers/Microsoft.Network/virtualNetworks/jenkins-vnet/subnets/jenkins-subnet",
                "name": "jenkins-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "jenkins-vnet",
            "resource_group_name": "DevSecOps-Capstone-RG",
            "subscription_id": "dc09713c-7d31-40ff-a15b-47032d864c73"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}